--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,25 +1,31 @@
 <h1>Edit Person</h1>
 <%= form_for @person do |f| %>
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %>
+  <p> <%= f.label :first_name %>
+  <%= f.text_field :first_name %> </p>
 
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name %>
+  <p> <%= f.label :last_name %>
+  <%= f.text_field :last_name %> </p>
 
-  <%= f.label :age %>
-  <%= f.number_field :age, min: 1, max: 110 %>
+  <p> <%= f.label :age %>
+  <%= f.number_field :age, min: 1, max: 110 %> </p>
   
-  <%= f.label :hair_color %>
-  <%= f.text_field :hair_color %>
+  <p> <%= f.label :hair_color %>
+  <%= f.text_field :hair_color %> </p>
 
-  <%= f.label :eye_color %>
-  <%= f.select :eye_color, ['blue', 'green', 'brown', 'hazel', 'black like their soul']%>
+  <p> <%= f.label :eye_color %>
+  <%= f.select :eye_color, ['blue', 'green', 'brown', 'hazel', 'black like their soul']%> </p>
 
-  <%= f.label :gender %>
-  <%= f.select :gender, ['female', 'male', 'other']%>
+  <p> <%= f.label :gender %>
+  <%= f.select :gender, ['female', 'male', 'other']%> </p>
   
-  <%= f.label :alive? %>
-  <%= f.select :alive, ['true', 'false']%>
+  <p> <%= f.label :alive? %>
+  <%= f.select :alive, ['true', 'false']%> </p>
+
+  <p> <%= f.label :hogwarts_house %> 
+  <%= f.select :hogwarts_house, ['Gryffindor', 'Hufflepuff', 'Ravenclaw', 'Slytherin']%> </p>
+
+  <p> <%= f.label 'Star Wars home planet:' %> 
+  <%= f.text_field :planet %> </p>
 
   <%= f.submit %> 
 <% end %>
