--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,10 +1,12 @@
-<h1>Person/h1>
+<h1>Person </h1>
 
 <h2> <p> Name: <%= @person.full_name %> </p> </h2>
 <p> Age: <%= @person.age %> </p>
 <p> Hair Color: <%= @person.hair_color %> </p>
 <p> Eye Color: <%= @person.eye_color %> </p>
 <p> Gender: <%= @person.gender %> </p>
+<p> Star Wars home planet: <%= @person.planet %> </p>
+<p> Hogwarts House: <%= @person.hogwarts_house %> </p>
 <p> Alive? <%= @person.alive %> </p>
 
 <%= link_to "Back", people_path %> 
